feat: implement segments fetching & editing
